# orkesy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  orkesy.example.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md
examples/: docker.yaml  monorepo.yaml  simple.yaml  webdev.yaml
orkesy-cli/: Cargo.toml
orkesy-cli/src/: health.rs  main.rs  runner.rs  sampler.rs
orkesy-cli/src/adapters/: docker.rs  mod.rs  process.rs
orkesy-cli/src/commands/: doctor.rs  init.rs  mod.rs
orkesy-cli/src/detectors/: docker.rs  mod.rs  node.rs  rust.rs
orkesy-cli/src/engines/: docker.rs  fake.rs  local_process.rs  mod.rs
orkesy-cli/src/ui/: mod.rs  theme.rs
orkesy-core/: Cargo.toml
orkesy-core/src/: adapter.rs  command.rs  config.rs  engine.rs  job.rs  lib.rs  log_filter.rs  metrics.rs  model.rs  plugin.rs  reducer.rs  state.rs  unit.rs
