[workspace]
members = [
  "orkesy-core",
  "orkesy-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/uzairali19/orkesy"
authors = ["Uzair Ali <uzairali19b@gmail.com>"]

[profile.release]
lto = true
codegen-units = 1
strip = true