[package]
name = "orkesy-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
orkesy-core = { path = "../orkesy-core" }
tokio = { version = "1", features = ["full", "process"] }
async-trait = "0.1"
libc = "0.2"

ratatui = "0.29"
crossterm = "0.28"

[features]
default = []
docker = ["bollard"]
health-http = ["reqwest"]

[dependencies.bollard]
version = "0.18"
optional = true

[dependencies.reqwest]
version = "0.12"
optional = true