[package]
name = "orkesy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

description = "Orkesy TUI/CLI (git install, workspace mode)"

[[bin]]
name = "orkesy"
path = "src/main.rs"

[dependencies]
orkesy-core = { path = "../orkesy-core" }

tokio = { version = "1", features = ["full", "process"] }
async-trait = "0.1"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.32"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
serde_yaml = "0.9"

ratatui = "0.29"
crossterm = "0.28"

[features]
default = []
docker = ["bollard", "futures-util"]
health-http = ["reqwest"]

[dependencies.bollard]
version = "0.18"
optional = true

[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.reqwest]
version = "0.12"
optional = true