[package]
name = "orkesy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

description = "Core models, state, config parsing, and reducer/event system for Orkesy."
keywords = ["tui", "cli", "orchestration", "devtools", "services"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"